--- a/scss/pages/_caloriedeficit.scss
+++ b/scss/pages/_caloriedeficit.scss
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr auto auto;
     grid-template-areas: 
-    "info info info info calculator calculator"
+    "info info info info info info"
     "recipes2 recipes2 recipes2 recipes2 recipes2 recipes2"
     "cat1 cat1 cat2 cat2 cat3 cat3";
     .info{
@@ -42,41 +42,7 @@
     padding: 10px;
     height: 130px;
 }
-.calorie_landing{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    a{
-        background-color: $color_green;
-        padding: 15px;
-        color: white;
-        border-radius: 30px;
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 1rem;
-        &:hover{
-            background-color: $color_purple;
-        }
-    }
-}
-#calculator__landingCalorie{
-    flex-direction: column;
-    .calculator__items{ 
-        margin-top: 70px;
-        flex-direction: column;
-        .calculator__gender,.calculator__age,.calculator__weight,.calculator__activity,.calculator__goal{
-            padding: 20px;
-            border: none;
-        }
-        .calculator__gender{
-            align-items: center;
-            div{
-                width: fit-content;
-                padding: 0;
-            }
-        }
-    } 
-}
+
 .cat1{
     height: auto;
     grid-area: cat1;
