--- a/scss/pages/_calculator.scss
+++ b/scss/pages/_calculator.scss
@@ -4,117 +4,162 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.calculator__container{
-    grid-area: calculator;
-    background-color: #ecf9f7;
-    padding: 30px;
-    width: 90%;
-    margin: 20px auto;
-    .calculator__title{
+
+body{
+    font-family: 'Roboto', sans-serif;
+    header{
         text-align: center;
-    }
-    .calculator__items{
-        h5{
-            font-size: 1rem;
-        }
-        display: flex;
-        margin: 20px;
-        justify-content: space-around;
-        .calculator__gender{
-            text-align: center;
-            display: block;
-            padding: 60px;
-            border-right: grey solid 0.5px;
-            div{
-                .button__style{
-                    border-radius: 30px;
-                    margin: 3px;
-                }
-            }
-        }
-        .calculator__age{
-            text-align: center;
-            padding: 60px;
-            border-right: grey solid 0.5px;
-            div{
-                input{
-                    border-radius: 30px;
-                    margin: 3px;
-                    padding: 5px;
-                    border: grey 1px solid;
-                    text-align: center;
-                }
-                
-            }
-        }
-        .calculator__weight{
-            text-align: center;
-            padding: 60px;
-            border-right: grey solid 0.5px;
-            .weight{
-                display: flex;
-                justify-content: center;
-                div{
-                    input{
-                        border-radius: 30px 0 0 30px;
-                        margin-top: 3px;
-                        padding: 5px;
-                        border: grey 1px solid;
-                        text-align: center;
-                    }
-                }
-                div{
-                    p{
-                        background-color: whitesmoke;
-                        border-radius: 0 30px 30px 0;
-                        margin-top: 3px;
-                        padding: 5px;
-                        border: grey 1px solid;
-                        border-left: none;
-                        text-align: center;
-                    }
-                }
-                
-            }
-        }
-        .calculator__activity{
-            text-align: center;
-            padding: 60px;
-            border-right: grey solid 0.5px;
-            div{
-                button{
-                    border-radius: 30px;
-                    margin: 3px;
-                }
-            }
-        }
-        .calculator__goal{
-            text-align: center;
-            padding: 60px;
-            div{
-                button{
-                    border-radius: 30px;
-                    margin: 3px;
-                }
-            }
+        h1{
+            font-weight: bold;
         }
     }
-    .calculator__button{
+    .mainContainer{
         display: flex;
-        justify-content: center;
-        .button__style{
-            background-color: $color_green;
-            border-radius: 30px;
-            color: white;
+        background-color: rgb(219, 244, 233);
+        margin: 20px auto;
+        width: 65%;
+        .titleContainer{
+            width: 40%;
+            padding: 25px; 
+            border-right: solid black .1px;
+            p{
+                font-weight: 300;
+                text-align: justify;
+            }
+        }
+        .inputsContainer{
+            width: 60%;
             padding: 15px;
-            border: none;
-            font-weight: 600;
-            &:hover{
-                background-color: $color_purple;
+            .nameContainer{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 10px;
+                .emailInput{
+                    background-color: white;
+                    border: black solid .5px;
+                    margin: 2px;
+                    padding: 10px;
+                    border-radius: 30px;
+                    width: 200px;
+                }
+            }
+            .calculatorContainer{
+                padding: 2px;
+                margin: auto;
+                div{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 10px;
+                    input, .selectors{
+                        background-color: white;
+                        border: black solid .5px;
+                        margin: 2px;
+                        padding: 10px;
+                        border-radius: 30px;
+                        width: 200px;
+                    }   
+                }
+            }
+        }
+    }
+    .sectionCalculator{
+            display: flex;
+            justify-content: center;
+        .buttonCalculate{
+            background-color:$color_green;
+            border-radius: 30px;
+            padding: 15px;
+            font-size: .9rem;
+            font-weight: 700;
+            width: 300px;
+            text-align: center;
+            margin:10px;
+            color: white;
+            border: none
+        ;
+        &:hover{
+            background-color: $color_purple;
+        }
+        }
+    }
+    section{
+        .resultMessage{
+            text-align: center;
+            margin: 10px auto;
+            h2{
+                font-size: 2rem;
+            }
+            h4{
+                font-size: 1.2rem;
+            }
+            p{
+                font-size: .9rem;
+                margin: 5px;
+            }
+        }
+        .resetButton{
+            text-decoration: underline;
+            width: fit-content;
+            display: flex;
+            justify-content: center;
+            background-color: transparent;
+            color: rgb(109, 23, 179);
+            border: transparent;
+            margin: auto;
+        }
+        .noDisplay{
+            display: none;
+        }
+    }
+}
+
+
+//responsive
+
+@media screen and (max-width: 934px) {
+    body{
+        .mainContainer{
+            width: 80%;
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    body{
+        .mainContainer{
+            flex-direction: column;
+            align-items: center;
+            width: 90%;
+            .titleContainer{
+                text-align: center;
+                border-right: none;
+                width: 80%;
+                padding: 20px; 
+            p{
+                font-weight: 300;
+                text-align: center;
+
+            }
+            }
+            .inputsContainer{
+                width: 60%;
+                padding: 15px;
+                .nameContainer{
+                    flex-direction: column;
+                }
+                .calculatorContainer{
+                    div{
+                        flex-direction: column;
+                    }
+                }
             }
         }
     }
 }
+
+
 .result{
     display: flex;
     flex-direction: column;
