--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -179,7 +179,7 @@ main{
             }
         }
         .containernews3{
-            input{
+            button{
                 margin-top: 3%;
                 font-size: 1rem;
                 background-color: grey;
